<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar_layout" />
    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/printme_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_mobileapplogo" />

        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/registrationInstructions"
            android:textColor="@color/textView_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registrationTitle"
            android:gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:text="@string/registration"
            android:textColor="@color/textView_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textEmailAddress"
                android:textSize="16sp"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/email_error_text"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/invalidEmail"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:visibility="invisible"
            android:textColor="@color/design_textinput_error_color"/>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_below="@+id/login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:layout_gravity="center_horizontal"
        android:textSize="14sp"
        android:id="@+id/nextButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:enabled="false"
        />

</RelativeLayout>