<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/responseLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/accountLayout"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendResponseByEmail"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"/>
        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="10dp"
            android:id="@+id/email_response_switch"
            android:checked="true" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailListRecyclerView"
        android:layout_below="@+id/responseLayout"
        android:background="@color/White"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/White"
        android:layout_below="@+id/emailListRecyclerView"
        android:id="@+id/addEmailLayout"
        >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addEmail"
        android:id="@+id/addEmailTextView"
        android:textSize="17sp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/colorPrimary"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/notifyLayout"
        android:layout_below="@+id/addEmailLayout"
        android:layout_marginTop="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:layout_marginTop="18dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sendNotifyLayout"
        android:orientation="horizontal"
        android:layout_below="@+id/notifyLayout"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendNotification"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/notify_switch"
            android:checked="true"
            android:layout_marginEnd="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/aboutLayout"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/sendNotifyLayout"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginTop="18dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"

            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/termsLayout"
        android:layout_below="@+id/aboutLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/termsOfUse"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/black" />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="12dp"
            android:layout_height="17dp"
            android:id="@+id/terms"
            app:srcCompat="@drawable/ic_mobileappandroid_forward_icon"
            android:background="@color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/privacyLayout"
        android:layout_below="@+id/termsLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacyPolicy"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/black"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="12dp"
            android:layout_height="17dp"
            android:id="@+id/privacy"
            app:srcCompat="@drawable/ic_mobileappandroid_forward_icon"
            android:background="@color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/helpLayout"
        android:layout_below="@+id/privacyLayout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/black"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="12dp"
            android:layout_height="17dp"
            android:id="@+id/help"
            app:srcCompat="@drawable/ic_mobileappandroid_forward_icon"
            android:background="@color/transparent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="15dp"
            />
    </LinearLayout>

</RelativeLayout>
</ScrollView>