
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <include layout="@layout/toolbar_layout" />
    <LinearLayout
        android:id="@+id/verify_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="45dp"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/printme_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/ic_mobileapplogo"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/verificationInstruction"
            android:textColor="@color/textView_color"
            android:layout_gravity="center_horizontal"
            android:textSize="16sp"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/verification"
            android:textColor="@color/textView_color"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/codeEdiText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textSize="16sp"
                android:textAllCaps="true"/>

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/validation_error_text"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:text="@string/invalidCode"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:visibility="invisible"
            android:textColor="@color/design_textinput_error_color"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/okButton"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verify_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="14sp"
        android:background="@drawable/border"
        android:layout_gravity="center_horizontal"
        android:enabled="false"/>

</RelativeLayout>